force-app/main/default/objects/AcctSeedERP__Sales_Order_Line__c/fields/Inventory_Cost__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Cost</label>
    <referenceTo>AcctSeed__Inventory_Cost__c</referenceTo>
    <relationshipLabel>Sales Order Line</relationshipLabel>
    <relationshipName>Sales_Order_Line</relationshipName>
    <type>Lookup</type>
</CustomField>