force-app/main/default/objects/AcctSeedERP__Sales_Order_Line__c/fields/InvestoryCost__c.field-meta.xml
<CustomField>
    <fullName>InvestoryCost__c</fullName>
    <label>InvestoryCost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>