force-app/main/default/objects/AcctSeedERP__Sales_Order_Line__c/fields/Non_Taxable_Line__c.field-meta.xml
<CustomField>
    <fullName>Non_Taxable_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Taxable Line</label>
    <type>Checkbox</type>
</CustomField>