force-app/main/default/objects/AcctSeedERP__Sales_Order_Line__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>Product_Select__c</referenceTo>
    <relationshipLabel>Sales Order Line</relationshipLabel>
    <relationshipName>Sales_Order_Line</relationshipName>
    <type>Lookup</type>
</CustomField>