force-app/main/default/objects/AcctSeedERP__Sales_Order_Line__c/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <label>Sale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipment/Projects</fullName>
            </value>
            <value>
                <fullName>Parts/Aftermarket</fullName>
            </value>
            <value>
                <fullName>General Contracting</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Web Store</fullName>
            </value>
            <value>
                <fullName>Marketing/ Rep Services</fullName>
            </value>
            <value>
                <fullName>General Contracting (MIB Only)</fullName>
            </value>
            <value>
                <fullName>Distribution/Fullfillment Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>