force-app/main/default/objects/AcctSeedERP__Sales_Order_Line__c/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+  AcctSeedERP__Sales_Order__c  ,  AcctSeedERP__Sales_Order__r.Sales_Order_Number__c  , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order</label>
    <type>Text</type>
</CustomField>