force-app/main/default/objects/AcctSeedERP__Sales_Order_Line__c/fields/SPX_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>SPX_Order_Number__c</fullName>
    <description>Order number given by SPX for MaRRS</description>
    <label>SPX Order Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>