force-app/main/default/objects/AcctSeedERP__Sales_Order_Line__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <formula>Quote_Line_Item__r.Tag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tag</label>
    <type>Text</type>
</CustomField>